# gdalcrop

./: Dockerfile  LICENSE  README.md  setup.cfg
gdalcrop/: cli.py  main.py
