[metadata]
name = gdalcrop
version = "0.0.0"

author = LakeRainSound
author_email = restartsugar@gmail.com
description = gdalcrop

[options]
# Pythonバージョンの制約
pythonrequire = >=3.7
# 含めるパッケージの選択．この場合は自動で探索
packages = find:

# 依存関係の列挙
install_requires =
          GDAL
[options.packages.find]
# 自動探索から外すものを列挙
exclude = .gitignore

[options.entry_points]
console_scripts =
    # コマンド名 = モジュールまでのパス:関数名
    gdalcrop = gdalcrop.main:main
